Fix for status message layout issue (<dd> too far away from <dt>)
git-svn-id: http://svn.civicrm.org/civicrm/trunk@24469 cff41f8d-9fe8-0310-9d4e-fb156a3ffe5e

--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -441,6 +441,10 @@ div.spacer,
   width: 30px;
 }
 
+#crm-container div.status dd {
+  margin-left: 45px;
+}
+
 #crm-container .messages {
   margin: 1.0em 0em 1.0em;
   border: 1px solid #CCCCCC;
